added statusbar logic

--- a/el_pollo_locco.html
+++ b/el_pollo_locco.html
@@ -11,11 +11,13 @@
 
     <canvas id="canvas" width="720" height="480"></canvas>
 
+    <script src="js/models/drawable-object.class.js"></script>
     <script src="js/models/movable-object.class.js"></script>
     <script src="js/models/character.class.js"></script>
     <script src="js/models/chicken.class.js"></script>
     <script src="js/models/cloud.class.js"></script>
     <script src="js/models/background-object.class.js"></script>
+    <script src="js/models/statusbar.js"></script>
     <script src="js/models/level.class.js"></script>
     <script src="js/models/world.class.js"></script>
     <script src="js/models/endboss.class.js"></script>
