--- a/el_pollo_locco.html
+++ b/el_pollo_locco.html
@@ -14,10 +14,10 @@
     <script src="js/models/drawable-object.class.js"></script>
     <script src="js/models/movable-object.class.js"></script>
     <script src="js/models/character.class.js"></script>
+    <script src="js/models/statusbar.class.js"></script>
     <script src="js/models/chicken.class.js"></script>
     <script src="js/models/cloud.class.js"></script>
     <script src="js/models/background-object.class.js"></script>
-    <script src="js/models/statusbar.js"></script>
     <script src="js/models/level.class.js"></script>
     <script src="js/models/world.class.js"></script>
     <script src="js/models/endboss.class.js"></script>
