--- a/el_pollo_locco.html
+++ b/el_pollo_locco.html
@@ -15,6 +15,7 @@
     <script src="js/models/movable-object.class.js"></script>
     <script src="js/models/character.class.js"></script>
     <script src="js/models/statusbar.class.js"></script>
+    <script src="js/models/throwable-object.class.js"></script>
     <script src="js/models/chicken.class.js"></script>
     <script src="js/models/cloud.class.js"></script>
     <script src="js/models/background-object.class.js"></script>
