--- a/el_pollo_locco.html
+++ b/el_pollo_locco.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" translate="no">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -19,11 +19,11 @@
     <script src="js/models/chicken.class.js"></script>
     <script src="js/models/cloud.class.js"></script>
     <script src="js/models/background-object.class.js"></script>
+    <script src="levels/level1.js"></script>
     <script src="js/models/level.class.js"></script>
     <script src="js/models/world.class.js"></script>
     <script src="js/models/endboss.class.js"></script>
     <script src="js/models/keyboard.class.js"></script>
-    <script src="levels/level1.js"></script>
     <script src="js/game.js"></script>
   </body>
 </html>
