--- a/el_pollo_locco.html
+++ b/el_pollo_locco.html
@@ -14,9 +14,14 @@
     <script src="js/models/drawable-object.class.js"></script>
     <script src="js/models/movable-object.class.js"></script>
     <script src="js/models/character.class.js"></script>
-    <script src="js/models/statusbar.class.js"></script>
+    <script src="js/models/statusbar-coin.class.js"></script>
+    <script src="js/models/statusbar-bottle.class.js"></script>
+    <script src="js/models/statusbar-health.class.js"></script>
     <script src="js/models/throwable-object.class.js"></script>
-    <script src="js/models/chicken.class.js"></script>
+    <script src="js/models/collectable-bottles.class.js"></script>
+    <script src="js/models/collectable-object.class.js"></script>
+    <script src="js/models/chicken-normal.class.js"></script>
+    <script src="js/models/chicken-small.class.js"></script>
     <script src="js/models/cloud.class.js"></script>
     <script src="js/models/background-object.class.js"></script>
     <script src="levels/level1.js"></script>
