--- a/el_pollo_locco.html
+++ b/el_pollo_locco.html
@@ -18,7 +18,7 @@
     <script src="js/models/statusbar-bottle.class.js"></script>
     <script src="js/models/statusbar-health.class.js"></script>
     <script src="js/models/throwable-object.class.js"></script>
-    <script src="js/models/collectable-bottles.class.js"></script>
+    <script src="js/models/bottle.class.js"></script>
     <script src="js/models/collectable-object.class.js"></script>
     <script src="js/models/chicken-normal.class.js"></script>
     <script src="js/models/chicken-small.class.js"></script>
