--- a/el_pollo_locco.html
+++ b/el_pollo_locco.html
@@ -12,12 +12,11 @@
 
     <!-- Startscreen -->
     <section id="startscreen" style="display: none">
-      <div class="startscreen-btns-top">
-        <!-- <button class="play-btn" onclick="init()"> -->
-        <button class="play-btn">
-          <img src="img/10_other/play.png" alt="play-png" />
-          Play
-        </button>
+      <div class="start-top">
+        <div class="image-container">
+          <img class="image" src="img/10_other/play.svg" alt="play-button" onclick="init()" />
+          <p class="hover-text">Play</p>
+        </div>
       </div>
     </section>
 
@@ -40,7 +39,6 @@
     <script src="js/models/drawable-object.class.js"></script>
     <script src="js/models/movable-object.class.js"></script>
     <script src="js/models/chicken-normal.class.js"></script>
-
     <script src="js/models/character.class.js"></script>
     <script src="js/models/statusbar-coin.class.js"></script>
     <script src="js/models/statusbar-bottle.class.js"></script>
@@ -48,13 +46,11 @@
     <script src="js/models/statusbar-endboss.class.js"></script>
     <script src="js/models/bottle.class.js"></script>
     <script src="js/models/collectable-object.class.js"></script>
-
     <script src="js/models/chicken-small.class.js"></script>
     <script src="js/models/cloud.class.js"></script>
     <script src="js/models/background-object.class.js"></script>
     <script src="levels/level1.js"></script>
     <script src="js/models/level.class.js"></script>
-
     <script src="js/models/endboss.class.js"></script>
     <script src="js/models/throwable-object.class.js"></script>
   </body>
