--- a/el_pollo_locco.html
+++ b/el_pollo_locco.html
@@ -20,7 +20,7 @@
         <div class="top-right-buttons" id="top-right-buttons">
           <button id="mute-button" alt="Mute Game" onclick="toggleMute()"></button>
           <button id="fullscreen-button" alt="Toggle Fullscreen" onclick="toggleFullscreen()"></button>
-          <button id="pause-button" alt="Pause Game"></button>
+          <button id="pause-button" alt="Pause Game" onclick="world.togglePause()"></button>
         </div>
       </div>
       <div id="game-screen"></div>
