37 - Throw Bottle once
- works!

--- a/el_pollo_locco.html
+++ b/el_pollo_locco.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="img/10_other/sombrero.png" />
   </head>
   <body class="game-body" onload="startScreenSound()">
-    <h1>El pollo loco</h1>
+    <h1 class="game-h1">El pollo loco</h1>
 
     <section id="game-container">
       <div class="top-buttons">
