--- a/imprint_and_data_privacy.html
+++ b/imprint_and_data_privacy.html
@@ -9,7 +9,7 @@
   </head>
   <body class="imprint-body">
     <div class="imprintAndDataPrivacy">
-      <h2>Imprint</h2>
+      <h1>Imprint</h1>
       <p
         >This website is managed by Christian Grund and has been developed for educational purposes. The content has
         been supplied by Developer Akademie GmbH. Below you'll find my contact information:</p
@@ -26,7 +26,7 @@
       >
 
       <div class="container">
-        <h2>Privacy Policy</h2>
+        <h1>Privacy Policy</h1>
         <p>
           Thank you for visiting my website. At "El Pollo Loco", I take your privacy seriously. This Privacy Policy
           outlines how I collect, use, and protect your personal information when you visit my website.
@@ -75,6 +75,14 @@
           <a href="mailto:grund7@gmail.com">grund7@gmail.com</a>.
         </p>
       </div>
+      <h1>Sources</h1>
+      <p>Del Rio Bravo Kevin MacLeod <a href="incompetech.com">incompetech.com</a></p>
+      <p>Licensed under Creative Commons: By Attribution 3.0 License</p>
+      <p><a href="http://creativecommons.org/licenses/by/3.0/">http://creativecommons.org/licenses/by/3.0/ </a></p>
+      <p
+        >Music promoted by <a href="https://freemusicbg.com">https://freemusicbg.com</a> and
+        <a href="https://www.chosic.com">https://www.chosic.com</a></p
+      >
     </div>
   </body>
 </html>
