Mobile Responsive Start- and Endscreen
- finaly works!

--- a/el_pollo_locco.html
+++ b/el_pollo_locco.html
@@ -24,7 +24,7 @@
         </div>
       </div>
 
-      <div id="game-screen"></div>
+      <!-- <div id="game-screen"></div> -->
 
       <div class="startscreen-top-button" id="startscreen-top-button">
         <button id="play-button" onclick="init()">
