13 - Rotate screen device
works!

--- a/el_pollo_locco.html
+++ b/el_pollo_locco.html
@@ -120,6 +120,11 @@
       </section>
     </section>
 
+    <section id="overlay-rotate-device">
+      <img src="img/10_other/rotate-device.png" alt="rotate-device" />
+      <p>Please Rotate Device</p>
+    </section>
+
     <script src="js/models/keyboard.class.js"></script>
     <script src="js/game.js"></script>
     <script src="js/models/world.class.js"></script>
