45 - Kill chicken with bottle
- works, but sound bug

--- a/el_pollo_locco.html
+++ b/el_pollo_locco.html
@@ -20,7 +20,6 @@
         <div class="top-right-buttons" id="top-right-buttons">
           <button id="mute-button" alt="Mute Game" onclick="toggleMute()"></button>
           <button id="fullscreen-button" alt="Toggle Fullscreen" onclick="toggleFullscreen()"></button>
-          <button id="pause-button" alt="Pause Game" onclick="world.togglePause()"></button>
         </div>
       </div>
 
@@ -102,7 +101,7 @@
         >
 
         <p
-          >In "El Pollo Loco," Pepe faces different enemies, from small chickens to big boss ones! Guide Pepe safely
+          >In El Pollo Loco, Pepe faces different enemies, from small chickens to big boss ones! Guide Pepe safely
           through the desert by jumping over small chickens or stomping on them. But watch out for the big ones – they
           need special tricks to beat!</p
         >
