20 - Kill multiple enemies by jumping on them
- works!

--- a/el_pollo_locco.html
+++ b/el_pollo_locco.html
@@ -18,7 +18,7 @@
           <a href="./imprint_and_data_privacy.html" target="_blank"><button id="privacy-button"></button></a>
         </div>
         <div class="top-right-buttons" id="top-right-buttons">
-          <button id="mute-button" alt="Mute Game" onclick="toggleMute()"></button>
+          <button id="mute-button" alt="Mute Game" onclick="toggleMuteButton()"></button>
           <button id="fullscreen-button" alt="Toggle Fullscreen" onclick="toggleFullscreen()"></button>
         </div>
       </div>
@@ -84,8 +84,8 @@
             <img src="img/10_other/keyboard/r-button-icon.svg" alt="" />
             <p>Refill Bottles </p>
           </div>
-          <span>(Collect all </span>
-          <span>coins first!)</span>
+          <span>(Collect all coins </span>
+          <span>to unlock!)</span>
         </div>
       </section>
 
@@ -118,6 +118,7 @@
       <p>Please Rotate Device</p>
     </section>
 
+    <script src="js/audio.js"></script>
     <script src="js/models/keyboard.class.js"></script>
     <script src="js/game.js"></script>
     <script src="js/models/world.class.js"></script>
