--- a/el_pollo_locco.html
+++ b/el_pollo_locco.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="el_pollo_locco.css?version=23" />
     <link rel="icon" type="image/x-icon" href="img/10_other/sombrero.png" />
   </head>
-  <body class="game-body" onload="startScreenSound()">
+  <body class="game-body">
     <h1 class="game-h1">El pollo loco</h1>
 
     <section id="game-container">
