--- a/el_pollo_locco.html
+++ b/el_pollo_locco.html
@@ -2,12 +2,13 @@
 <html lang="en" translate="no">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width,  initial-scale=1.0" />
     <title>El Pollo Locco</title>
     <link rel="stylesheet" href="el_pollo_locco.css?version=23" />
     <link rel="icon" type="image/x-icon" href="img/10_other/sombrero.png" />
   </head>
   <body class="game-body">
+    <!-- <div class="mobile-wrapper"> -->
     <h1 class="game-h1">El pollo loco</h1>
 
     <section id="game-container">
@@ -117,6 +118,7 @@
       <img src="img/10_other/rotate-device.png" alt="rotate-device" />
       <p>Please Rotate Device</p>
     </section>
+    <!-- </div> -->
 
     <script src="js/audio.js"></script>
     <script src="js/models/keyboard.class.js"></script>
