46 Code Clean up
- game.js

--- a/el_pollo_locco.html
+++ b/el_pollo_locco.html
@@ -2,7 +2,7 @@
 <html lang="en" translate="no">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width,  initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>El Pollo Locco</title>
     <link rel="stylesheet" href="el_pollo_locco.css?version=23" />
     <link rel="icon" type="image/x-icon" href="img/10_other/sombrero.png" />
@@ -38,7 +38,7 @@
       <section id="endscreen" style="display: none">
         <img id="endscreen-text" alt="Game won!" />
 
-        <div class="endscreen-top-buttons">
+        <div class="endscreen-top-buttons" id="endscreen-top-buttons">
           <button class="endscreen-button" onclick="showStartscreen()">
             <img class="endscreen-btn-img" src="img/10_other/home.svg" alt="home symbol" />
             <p>Home</p>
@@ -96,21 +96,14 @@
         </div>
         <h2>Welcome to El Pollo Loco!</h2>
 
-        <p
-          >Join Pepe, our brave hero, as he journeys through the sunny Mexican desert! Help Pepe overcome challenges and
-          find the treasure of El Pollo Loco – the crazy chicken.</p
-        >
+        <p>Join Pepe, our brave hero, as he journeys through the sunny Mexican desert! Help Pepe overcome challenges and find the treasure of El Pollo Loco – the crazy chicken.</p>
 
         <p
-          >In El Pollo Loco, Pepe faces different enemies, from small chickens to big boss ones! Guide Pepe safely
-          through the desert by jumping over small chickens or stomping on them. But watch out for the big ones – they
-          need special tricks to beat!</p
+          >In El Pollo Loco, Pepe faces different enemies, from small chickens to big boss ones! Guide Pepe safely through the desert by jumping over small chickens or stomping on them. But watch out
+          for the big ones – they need special tricks to beat!</p
         >
 
-        <p
-          >Ready for adventure? Come along with Pepe, collect coins, refill Tabasco bottles, and let's beat the crazy
-          chicken together!</p
-        >
+        <p>Ready for adventure? Come along with Pepe, collect coins, refill Tabasco bottles, and let's beat the crazy chicken together!</p>
       </section>
     </section>
 
