--- a/el_pollo_locco.html
+++ b/el_pollo_locco.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>El Pollo Locco</title>
-    <link rel="stylesheet" href="el_pollo_locco.css?version=23" />
+    <link rel="stylesheet" href="style_1.css" />
+    <link rel="stylesheet" href="style_2.css" />
     <link rel="icon" type="image/x-icon" href="img/10_other/sombrero.png" />
   </head>
   <body class="game-body">
