--- a/imprint_and_data_privacy.html
+++ b/imprint_and_data_privacy.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EPL | Imprint & Data Privacy</title>
-    <link rel="stylesheet" href="el_pollo_locco.css?version=23" />
+    <link rel="stylesheet" href="style_1.css" />
+    <link rel="stylesheet" href="style_2.css" />
     <link rel="icon" type="image/x-icon" href="img/10_other/sombrero.png" />
   </head>
   <body class="imprint-body">
     <div class="imprintAndDataPrivacy">
       <h1>Imprint</h1>
       <p
-        >This website is managed by Christian Grund and has been developed for educational purposes. The content has
-        been supplied by Developer Akademie GmbH. Below you'll find my contact information:</p
+        >This website is managed by Christian Grund and has been developed for educational purposes. The content has been supplied by Developer Akademie GmbH. Below you'll find my contact
+        information:</p
       >
       <address>
         <p
@@ -20,54 +21,43 @@
           Email: <a href="mailto:grund7@gmail.com">grund7@gmail.com</a></p
         >
       </address>
-      <p
-        >For inquiries, feedback, or support, please don't hesitate to reach out to me via email. I value your input and
-        strive to provide the best possible experience for my users.</p
-      >
+      <p>For inquiries, feedback, or support, please don't hesitate to reach out to me via email. I value your input and strive to provide the best possible experience for my users.</p>
 
       <div class="container">
         <h1>Privacy Policy</h1>
         <p>
-          Thank you for visiting my website. At "El Pollo Loco", I take your privacy seriously. This Privacy Policy
-          outlines how I collect, use, and protect your personal information when you visit my website.
+          Thank you for visiting my website. At "El Pollo Loco", I take your privacy seriously. This Privacy Policy outlines how I collect, use, and protect your personal information when you visit my
+          website.
         </p>
         <h2>Information I Collect</h2>
         <p>
-          When you visit my website, I may collect certain information automatically, including your IP address, browser
-          type, operating system, referring URLs, and other technical information. I may also collect information you
-          voluntarily provide to me, such as your name, email address, or any other information you submit through my
-          contact forms or other communication channels.
+          When you visit my website, I may collect certain information automatically, including your IP address, browser type, operating system, referring URLs, and other technical information. I may
+          also collect information you voluntarily provide to me, such as your name, email address, or any other information you submit through my contact forms or other communication channels.
         </p>
         <h2>How I Use Your Information</h2>
         <p>
-          I use the information I collect to improve my website's functionality, analyze trends, administer the site,
-          and gather demographic information. I may also use your information to respond to your inquiries, provide you
-          with requested information or services, or communicate with you about updates to my website or other relevant
-          information.
+          I use the information I collect to improve my website's functionality, analyze trends, administer the site, and gather demographic information. I may also use your information to respond to
+          your inquiries, provide you with requested information or services, or communicate with you about updates to my website or other relevant information.
         </p>
         <h2>Cookies</h2>
         <p>
-          My website may use cookies and similar tracking technologies to enhance your browsing experience and analyze
-          usage patterns. You can choose to disable cookies through your browser settings, but please note that doing so
-          may affect the functionality of my website.
+          My website may use cookies and similar tracking technologies to enhance your browsing experience and analyze usage patterns. You can choose to disable cookies through your browser settings,
+          but please note that doing so may affect the functionality of my website.
         </p>
         <h2>Third-Party Links</h2>
         <p>
-          My website may contain links to third-party websites. Please note that I am not responsible for the privacy
-          practices or content of these third-party sites. I encourage you to review the privacy policies of these
-          websites before providing any personal information.
+          My website may contain links to third-party websites. Please note that I am not responsible for the privacy practices or content of these third-party sites. I encourage you to review the
+          privacy policies of these websites before providing any personal information.
         </p>
         <h2>Data Security</h2>
         <p>
-          I am committed to protecting the security of your personal information. I implement appropriate technical and
-          organizational measures to safeguard your data against unauthorized access, disclosure, alteration, or
-          destruction.
+          I am committed to protecting the security of your personal information. I implement appropriate technical and organizational measures to safeguard your data against unauthorized access,
+          disclosure, alteration, or destruction.
         </p>
         <h2>Changes to this Privacy Policy</h2>
         <p>
-          I reserve the right to update or modify this Privacy Policy at any time without prior notice. Any changes will
-          be effective immediately upon posting on this page. I encourage you to review this Privacy Policy periodically
-          for any updates.
+          I reserve the right to update or modify this Privacy Policy at any time without prior notice. Any changes will be effective immediately upon posting on this page. I encourage you to review
+          this Privacy Policy periodically for any updates.
         </p>
         <h2>Contact Me</h2>
         <p>
@@ -79,10 +69,7 @@
       <p>Del Rio Bravo Kevin MacLeod <a href="incompetech.com">incompetech.com</a></p>
       <p>Licensed under Creative Commons: By Attribution 3.0 License</p>
       <p><a href="http://creativecommons.org/licenses/by/3.0/">http://creativecommons.org/licenses/by/3.0/ </a></p>
-      <p
-        >Music promoted by <a href="https://freemusicbg.com">https://freemusicbg.com</a> and
-        <a href="https://www.chosic.com">https://www.chosic.com</a></p
-      >
+      <p>Music promoted by <a href="https://freemusicbg.com">https://freemusicbg.com</a> and <a href="https://www.chosic.com">https://www.chosic.com</a></p>
     </div>
   </body>
 </html>
