55 - Endboss Fightsound Bug
- fixed!

--- a/el_pollo_locco.html
+++ b/el_pollo_locco.html
@@ -44,7 +44,7 @@
             <img class="endscreen-btn-img" src="img/10_other/home.svg" alt="home symbol" />
             <p>Home</p>
           </button>
-          <button class="endscreen-button" onclick="closeEndscreen(), init()">
+          <button class="endscreen-button" onclick="closeEndscreen(), restartGame()">
             <img class="endscreen-btn-img" src="img/10_other/restart.svg" alt="restart symbol" />
             <p>Restart</p>
           </button>
