--- a/imprint_and_data_privacy.html
+++ b/imprint_and_data_privacy.html
@@ -10,7 +10,7 @@
   </head>
   <body class="imprint-body">
     <div class="imprintAndDataPrivacy">
-      <h1>Imprint</h1>
+      <h1 class="textsites-h1">Imprint</h1>
       <p
         >This website is managed by Christian Grund and has been developed for educational purposes. The content has been supplied by Developer Akademie GmbH. Below you'll find my contact
         information:</p
@@ -24,7 +24,7 @@
       <p>For inquiries, feedback, or support, please don't hesitate to reach out to me via email. I value your input and strive to provide the best possible experience for my users.</p>
 
       <div class="container">
-        <h1>Privacy Policy</h1>
+        <h1 class="textsites-h1">Privacy Policy</h1>
         <p>
           Thank you for visiting my website. At "El Pollo Loco", I take your privacy seriously. This Privacy Policy outlines how I collect, use, and protect your personal information when you visit my
           website.
@@ -65,7 +65,7 @@
           <a href="mailto:grund7@gmail.com">grund7@gmail.com</a>.
         </p>
       </div>
-      <h1>Sources</h1>
+      <h1 class="textsites-h1">Sources</h1>
       <p>Del Rio Bravo Kevin MacLeod <a href="incompetech.com">incompetech.com</a></p>
       <p>Licensed under Creative Commons: By Attribution 3.0 License</p>
       <p><a href="http://creativecommons.org/licenses/by/3.0/">http://creativecommons.org/licenses/by/3.0/ </a></p>
